--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,9 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "amazon-cognito-identity-js": "^5.2.10",
+    "axios": "^0.27.2",
+    "random-words": "^1.2.0",
     "react": "^18.2.0",
     "react-chatbot-kit": "^2.1.0",
     "react-dom": "^18.2.0",
