--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,15 +13,16 @@
     "@testing-library/user-event": "^13.5.0",
     "amazon-cognito-identity-js": "^5.2.10",
     "axios": "^0.27.2",
+    "postcss": "^8.4.14",
     "random-words": "^1.2.0",
     "react": "^18.2.0",
     "react-chatbot-kit": "^2.1.0",
-    "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-lex-plus": "^1.2.5",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "save": "^2.5.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
